# belajar_django_modular

./: .gitignore  dump.rdb  pyproject.toml  shell.nix
src/app_dashboard/: urls.py  views.py
src/app_dashboard/templates/app_dashboard/: beranda.html
src/app_landing/: urls.py  views.py
src/app_landing/templates/app_landing/: about.html  index.html
src/django_modular/: settings.py  urls.py
